tests/ui/invalid_binary_expr.stderr
error: mismatch types
   ╭─[tests/ui/invalid_binary_expr.ina:6:13]
   │
 6 │     let c = a + b;
   │             ──┬──
   │               ╰─── cannot add `integer` and `float`
   ∙
───╯
